kubernetes/apps/selfhosted/thelounge/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: thelounge
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: thelounge
      app.kubernetes.io/instance: thelounge
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
